# talk-camp-webapp

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
base/: forms.py  models.py  urls.py  views.py
base/api/: serializers.py  views.py
base/templates/base/: activity.html  activity_component.html  delete.html  feed_component.html  home.html  login_register.html  profile.html  room.html  room_form.html  topics.html  topics_component.html  update-user.html
static/styles/: style.css
talkcamp/: asgi.py  settings.py  urls.py  wsgi.py
templates/: main.html  navbar.html
