[tool.poetry]
name = "talkcamp"
version = "1.0.0"
description = "Talk Camp is a platform for connecting, sharing ideas, and fostering community."
authors = ["Yuuto Akihiro <https://github.com/yuutoa/>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.5"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
pillow = "^11.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
